karl package Changelog
======================

3.106 (2012-02-13)
------------------

- Fixed bug where images uploaded to new news items weren't moved from their
  temporary location once the news item was saved.

- Remove old tinymce version 3.3.9.2 from the codebase.

- Remove experimental desktop file synchronization feature.

- Convert GSSErrors due to invalid tickets (some Oxfam browsers send NTLM 
  tickets) from errors to warnings in the log to prevent firing off spurious
  alarms.

3.105 (2012-12-07)
------------------

- Fix wrapping problem with my profile pushdown. (LP #1058054)

- Fix layout on intranet home page to use three columns. (LP #1068157)

- Fix problem with global navigation not assigning selected status to
  some tabs. (LP #1068183)

- Prevent rtf converter from raising exception for parse errors when
  indexing file contents. (LP #1080642)

- Temporarily unwire chatter from UX2 UI. (LP #1086107)

3.104 (2012-12-03)
------------------

- Fixed 'came_from' redirect when using Kerberos login.

- Fix recent activity table layout in my profile pushdown. (LP #1068169)

- Make grid and search options font larger. (LP #1068147)

- Make sure that open blob files passed into repozitory get closed. (LP 
  #1081282)

3.103 (2012-11-29)
------------------

- Fix permission of the ajaxian Delete, MoveTo button actions in the Files grid.
  Affects both ux1 and ux2. (LP #1084066)

- Fix permission of the ajaxian file upload.
  Affects both ux1 and ux2. (LP #1084066)

3.102 (2012-11-21)
------------------

- Make sure generate_stats script calls set_current_instance. (LP #1067453)

- Make center section on intranets narrower to avoid breaking the layout.
  (LP #1068190).

- Fix css conflict that caused reference manual add buttons to disappear.
  (LP #1068200)

3.101 (2012-11-20)
------------------

- Fixed link to login form in the password reset completed page.
  (LP #1080834).

- Fixed bug in profile display introduced by new Chrome version.